--- a/app/yoga/index.html
+++ b/app/yoga/index.html
@@ -8,6 +8,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="../../../../Documents/[Udemy] [Иван Петриченко] Полный курс по JavaScript + React - с нуля до результата (2020)/01 Подготовка к работе/000 Как проходить данный курс/JS_task_answers-master/Задание_12/script.js"></script>
 </head>
 <body>
 <header>
